--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2017</h4>
+                    <h4>2019</h4>
                     <h4 class="subheading">Present</h4>
                   </div>
                   <div class="timeline-body">
@@ -492,7 +492,7 @@
           <div class = "col-sm-6 col-md-3">
             <div class = "team-member">
               <h4 class = "team-name">Li-bot</h4>
-              <p><b>Captain:</b> <span class="text-muted">Mani</span></p>
+              <p><b>Captain:</b> <span class="text-muted">Manibharathi</span></p>
               <!--<p class="reduce-gap"><b>Vice-Captain:</b> <span class="text-muted ">Nivethitha and Ajay</span></p>-->
             </div>
           </div>
@@ -539,7 +539,7 @@
           <div class = "col-sm-6 col-md-3">
             <div class = "team-member">
               <h4 class = "team-name">Web Development</h4>
-              <p><b>Lead Developer:</b> <span class="text-muted">Arshad</span></p>
+              <p><b>Lead Developer:</b> <span class="text-muted">Manibharathi</span></p>
               <p class="reduce-gap"><b>Developer:</b> <span class="text-muted ">Deepak</span></p>
             </div>
           </div>
@@ -605,7 +605,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; VITCC Robotics Club 2018</span>
+            <span class="copyright">Copyright &copy; VITCC Robotics Club 2019</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
